# windows-mcp-server

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ExempleDocsForMCP.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
docs/: DEVELOPMENT.md  PUBLISHING.md  REFERENCE_REVIEW.md  SECURITY_MODEL.md  TOOLS.md
vscode-extension/: package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
website/: index.html
website/assets/: app.js  styles.css
website/privacy/: index.html
website/terms/: index.html
windows_mcp_server/: __init__.py  registry.py  server.py
windows_mcp_server/tools/: advanced_process.py  developer_environment.py  disk_health.py  driver_maintenance.py  event_diagnostics.py  execute_powershell.py  hardware_drivers.py  manage_network.py  manage_registry.py  media_management.py  network_diagnostics.py  optimization.py  peripherals.py  power_hardware.py  process_management.py  restore_update_controls.py  safe_file_operations.py  security_updates.py  services.py  shell_helpers.py  software_audit.py  software_maintenance.py  startup_tasks.py  storage_analysis.py  system_info.py  task_manager.py  virtualization.py  window_management.py
