[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windows-mcp-server"
version = "0.3.0"
description = "Advanced Windows management, diagnostics, security, and optimization MCP server"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "AhmedLaminou", email = "ahmedlaminouamadou@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "psutil>=6.0.0",
    "pydantic>=2.0.0"
]
keywords = ["mcp", "windows", "automation", "system", "task manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/AhmedLaminou/windows-mcp-server"
Repository = "https://github.com/AhmedLaminou/windows-mcp-server.git"
Documentation = "https://github.com/AhmedLaminou/windows-mcp-server/tree/main/docs"
Issues = "https://github.com/AhmedLaminou/windows-mcp-server/issues"

[project.scripts]
windows-mcp-server = "windows_mcp_server.server:main"
